SClosure's operator overloading